--- a/example.env
+++ b/example.env
@@ -2,3 +2,4 @@
 export TENANT_NAME='my-tenant'
 export TENANT_PASSWORD='my-password'
 export MASTER_ACCESS_TOKEN='master-access-token'
+export MASTER_DOMAIN='https://master.3scale.example.com'
