Add more TENANT variables to script

--- a/example.env
+++ b/example.env
@@ -1,5 +1,9 @@
 # Copy and source this file before running scripts
-export TENANT_NAME='my-tenant'
-export TENANT_PASSWORD='my-password'
+
 export MASTER_ACCESS_TOKEN='master-access-token'
 export MASTER_DOMAIN='https://master.3scale.example.com'
+
+export TENANT_NAME='my-tenant'
+export TENANT_ADMIN='my-tenant-admin'
+export TENANT_PASSWORD='my-password'
+export TENANT_EMAIL='my-password'
